Bug 94428 - Printing adds garbage (characters) to top edge of page
Summary: Printing adds garbage (characters) to top edge of page
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
5.0.2.2 release
Hardware: x86-64 (AMD64) Windows (All)
: highest major
Assignee: Not Assigned
URL:
Whiteboard: target:5.0.3
Keywords: bibisectRequest, regression
: 94478 94550 94675 94988 94990 95110 95200 95202 95270 95461 95472 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-09-22 00:43 UTC by Steve
Modified: 2015-12-17 10:32 UTC (History)
14 users (show)

See Also:
Crash report or crash signature:


Attachments
XPS-printed document showing garbage at top of page. (49.14 KB, application/zip)
2015-09-22 00:43 UTC, Steve
Details
jpg image of printout showing the problem (104.93 KB, image/jpeg)
2015-09-22 15:19 UTC, Steve
Details
Original Writer document (18.21 KB, application/vnd.oasis.opendocument.text)
2015-09-22 15:22 UTC, Steve
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Steve 2015-09-22 00:43:22 UTC
Created attachment 118918 [details]
XPS-printed document showing garbage at top of page.

Printing from 5.0.2.2rc results in some garbage printing along the top edge of the page, apparently starting from the left edge.

How deep from the top and how far to the right it extends, seems to depend on the contents/formatting of the detail to be printed.  It varies from barely noticeable, to quite prominent.

In the more prominent cases, it almost looks as if it tried to print the entire page on that one line but without any borders, indents, etc.

This does NOT occur when exporting to a PDF, only when printing.

See the attached XPS print of a Writer document.
Comment 1 Buovjaga 2015-09-22 14:19:39 UTC
I don't know how to open the file and anyway we need the original file or an example where it occurs.

Set to NEEDINFO.
Change back to UNCONFIRMED after you have provided the file.
Comment 2 Steve 2015-09-22 15:19:52 UTC
Created attachment 118932 [details]
jpg image of printout showing the problem
Comment 3 Steve 2015-09-22 15:22:30 UTC
Created attachment 118933 [details]
Original Writer document

Note that the problem is not limited to this document, but instead seems to affect *anything* which is printed from (at least) Writer and Calc.
Comment 4 Steve 2015-09-22 15:31:17 UTC
The XPS document *is* an example of where the problem occurs.  It can be viewed with the XPS viewer on any supported version of Windows, which is the platform for which I'm submitting this bug.

  But as per your request, I have also included a jpg image of the affected portion of that printout as well as the Writer document from which it was produced.

  However, please note that the issue is *NOT* limited to XPS "printouts".  It also occurs on "real" printouts using a "real" printer and "real" paper.  I just used the XPS example since I cannot attach a piece of paper to this submission. :)

  Also, please note that the problem is not limited to this document or to Writer.  It seems to affect anything that I print from (at least) Writer and Calc.
Comment 5 Steve 2015-09-24 20:46:09 UTC
Also reported in Bug 94478:
https://bugs.documentfoundation.org/show_bug.cgi?id=94478
Comment 6 Joel Madero 2015-09-25 03:50:45 UTC
*** Bug 94478 has been marked as a duplicate of this bug. ***
Comment 7 Thomas Graul 2015-09-26 08:07:10 UTC
Yes I have the same problem too.
Comment 8 Buovjaga 2015-09-27 08:30:10 UTC
I think we can set this to NEW as there are now 3 people seeing this.
Comment 9 bert.vanderveen 2015-09-27 09:14:20 UTC
I have the same problem with garbage on upper left top of page when printing from my Windows 7 desktop, both via parallel port printer and usb printer. Printing the same document from my Windows 10 desktop via serial port does not show the garbage. Maybe this is helpful in locating the problem.
Comment 10 Buovjaga 2015-09-28 08:15:39 UTC
We are getting so many reports for this regression that it qualifies as a most annoying bug, so priority -> highest.
Comment 11 Buovjaga 2015-09-28 14:13:58 UTC
*** Bug 94550 has been marked as a duplicate of this bug. ***
Comment 12 Joel Madero 2015-09-28 17:34:35 UTC
Seems like Major is also appropriate (major feature - printing - having some significant issues). Setting to Major
Comment 13 David Harrison 2015-09-30 12:48:40 UTC
Exactly the same issue here (Windows version to Brother HL-5170DN, among other printers). Also absent when *exporting* to PDF rather than printing to PDF driver.
Comment 14 Commit Notification 2015-10-01 15:22:17 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cb81ca35d4d4db27f8bd3322fc16aa73d9cf38bb

tdf#94428 - don't use OpenGL font rendering when we're printing.

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Michael Meeks 2015-10-01 15:23:12 UTC
Not printer specific; it's a GL issue; so un-check:

Tools->Options->View->"Use OpenGL for all rendering"

The fix is pretty trivial; just pushed to master; and would much appreciate testing of windows printing there, and a sanity check of:

https://gerrit.libreoffice.org/19079

The punch-line is that we still use the old GDI rendering for printing; and fonts needed to know about that (I guess).
Comment 16 Steve 2015-10-01 23:41:47 UTC
Thanks, Michael!

I un-checked Tools->Options->View->"Use OpenGL for all rendering" in 5.0.2.2 and no more garbage on printouts.

I'd be happy to try printing from master if you can supply a link; I don't know where to find that.
Comment 17 Buovjaga 2015-10-02 06:28:11 UTC
(In reply to Steve from comment #16)
> Thanks, Michael!
> 
> I un-checked Tools->Options->View->"Use OpenGL for all rendering" in 5.0.2.2
> and no more garbage on printouts.
> 
> I'd be happy to try printing from master if you can supply a link; I don't
> know where to find that.

http://dev-builds.libreoffice.org/daily/master/?C=M;O=A

I think the latest Linux build right now would have the fix. For Windows you would have to wait for the coming nightly build.
Comment 18 Commit Notification 2015-10-02 08:39:11 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1d49c4a54995b6c96a32a092f78b38b36a5748d5&h=libreoffice-5-0

tdf#94428 - don't use OpenGL font rendering when we're printing.

It will be available in 5.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 19 Terrence Enger 2015-10-05 01:55:38 UTC
*** Bug 94675 has been marked as a duplicate of this bug. ***
Comment 20 V Stuart Foote 2015-10-12 20:34:45 UTC
*** Bug 94990 has been marked as a duplicate of this bug. ***
Comment 21 V Stuart Foote 2015-10-13 17:59:44 UTC
*** Bug 94988 has been marked as a duplicate of this bug. ***
Comment 22 V Stuart Foote 2015-10-16 17:00:46 UTC
*** Bug 95110 has been marked as a duplicate of this bug. ***
Comment 23 V Stuart Foote 2015-10-20 17:26:33 UTC
*** Bug 95200 has been marked as a duplicate of this bug. ***
Comment 24 Maxim Monastirsky 2015-10-20 18:35:20 UTC
*** Bug 95202 has been marked as a duplicate of this bug. ***
Comment 25 Dick Boogaers 2015-10-21 11:39:41 UTC
Also, text in color will print as black
Comment 26 Joel Madero 2015-10-21 14:43:58 UTC
Please don't report secondary issues to the bug report. 1 bug per report. If it still prints black after this commit, report a separate issue as this one is closed.
Comment 27 Dick Boogaers 2015-10-21 18:04:26 UTC
(In reply to Joel Madero from comment #26)
> Please don't report secondary issues to the bug report. 1 bug per report. If
> it still prints black after this commit, report a separate issue as this one
> is closed.

Thes issue of the colored text is mentioned nowhere in the bug report, but is still fixed in the patch. Users should know this. So I don't agree with you. Because apparently it is the same bug, not a second one.
Comment 28 Joel Madero 2015-10-21 20:19:08 UTC
Just for future reference that's now how we (as in the QA team) does it. Just because the same commit fixed the issue doesn't mean it doesn't deserve its own bug report. But like you said, it seems fixed so no need to waste time.
Comment 29 Buovjaga 2015-10-26 08:36:37 UTC
*** Bug 95270 has been marked as a duplicate of this bug. ***
Comment 30 Buovjaga 2015-11-11 11:58:45 UTC
*** Bug 95472 has been marked as a duplicate of this bug. ***
Comment 31 Buovjaga 2015-11-11 11:59:55 UTC
*** Bug 95461 has been marked as a duplicate of this bug. ***
Comment 32 Peter Lairo 2015-11-21 10:58:17 UTC
Thus bug still occurs on 5.0.3.2. My test printout just now may not have shown "smudges" at the top of the page (instead of the graphic), but the graphis was not printed at all. So perhaps the status should bechanged to "REOPENED"? Likewise, the Whiteboard should be updated since the "target" (5.0.3) has already been missed. I'll attach some scanned printouts that show this bug...
Comment 33 Peter Lairo 2015-11-21 11:10:22 UTC
(In reply to Peter Lairo from comment #32)
> Thus bug still occurs on 5.0.3.2.

Nevermind. I didn't know that I had to restart LibreOffice after unchecking: Tools -> Options -> View -> "Use OpenGL for all rendering". After the restart, the image printed normally, and colored text prints in color too. Very happy now! Thanks!
Comment 34 Robinson Tryon (qubit) 2015-12-17 10:32:59 UTC
Migrating Whiteboard tags to Keywords: (bibisectRequest)
[NinjaEdit]