tdf#94428 - don't use OpenGL font rendering when we're printing.

Change-Id: I212bb442bdffa38d77e7e7357199c39420fa7951